[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 900.0
margin_bottom = 600.0
color = Color( 1, 0.913725, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 23.0
margin_right = 183.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Por favor realice esto."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="."]
margin_left = 779.0
margin_top = 543.0
margin_right = 868.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Realizado"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FinishedButton" to="." method="_on_FinishedButton_pressed"]
